syntax = "proto3";

service MasterService {
  rpc Connect (DataForConnect) returns (Empty) {}
}

service ProtoCall {
  rpc Sample (Empty) returns (Bytes) {}
  rpc Classify (DataForClassify) returns (Empty) {}
  rpc Collect (Bytes) returns (Empty) {}
  rpc FinalSort (Empty) returns (Empty) {}
}

message DataForConnect{
  string dest = 1;
}

message DataForClassify{
  repeated bytes keys = 1;
  repeated string dests = 2;
}

message Bytes {
  bytes Bytes = 1;
}

message Empty {
}